# mcp-marketing-ga4

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
ga4_mcp/: coordinator.py  identity.py  server.py  session.py
ga4_mcp/tools/: metadata.py  reporting.py
