[project]
name = "mcp-marketing-ga4"
version = "0.1.0"
description = "Agent24 Marketing MCP — Google Analytics 4"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.9",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-analytics-data>=0.19.0",
    "google-auth>=2.40.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-marketing-ga4 = "ga4_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ga4_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
