[project]
name = "mcp-marketing-ga4"
version = "0.1.0"
description = "Agent24 Marketing MCP — Google Analytics 4"
requires-python = ">=3.11"
dependencies = [
    "google-analytics-data>=0.19.0",
    "google-auth>=2.40.0",
    "mcp-common @ git+ssh://git@github.com/Sydus/mcp-common.git@v0.7.1",
]

[project.scripts]
mcp-marketing-ga4 = "ga4_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ga4_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
